перевод страницы с ПД

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-09-19 18:27+0300\n"
-"PO-Revision-Date: 2024-09-19 18:34+0300\n"
+"POT-Creation-Date: 2024-09-19 19:25+0300\n"
+"PO-Revision-Date: 2024-09-19 19:29+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1766,6 +1766,162 @@ msgstr "User Agreement"
 msgctxt "index"
 msgid "и порядка обработки персональных данных"
 msgstr "and the procedure of personal data processing"
+
+#: player/templates/player/personal_data.html:6
+#: player/templates/player/personal_data.html:10
+msgctxt "personal_data"
+msgid "Согласие на обработку персональных данных"
+msgstr "Personal data consent of processing"
+
+#: player/templates/player/personal_data.html:13
+msgctxt "personal_data"
+msgid ""
+"Я, передавая уникальные идентификаторы социальных сетей, а также имя, "
+"фамилию и псевдонимы в них, далее именуемый(ая) \"Субъект персональных "
+"данных\", даю свое согласие на обработку своих персональных данных "
+"Администрацией Wild Politics, физическим лицом Горшенин А.И., далее "
+"именуемым \"Администрация\", в соответствии с законодательством Российской "
+"Федерации (далее - \"Законодательство\")."
+msgstr ""
+"I, by submitting unique identifiers of social networks, as well as the name, "
+"surname and nicknames in them, hereinafter referred to as the \"Subject of "
+"personal data\", give my consent to the processing of my personal data by "
+"the Administration of Wild Politics, an individual Gorshenin A.I., "
+"hereinafter referred to as the \"Administration\", in accordance with the "
+"legislation of the Russian Federation (hereinafter referred to as the "
+"\"Legislation\")."
+
+#: player/templates/player/personal_data.html:15
+msgctxt "personal_data"
+msgid "Цель обработки персональных данных:"
+msgstr "Purpose of personal data processing:"
+
+#: player/templates/player/personal_data.html:17
+msgctxt "personal_data"
+msgid "Предоставление услуг развлекательного характера."
+msgstr "Provision of entertainment services."
+
+#: player/templates/player/personal_data.html:18
+msgctxt "personal_data"
+msgid "Информирование пользователя об изменениях работы Сайта."
+msgstr "Informing the user about changes in the operation of the Site."
+
+#: player/templates/player/personal_data.html:19
+msgctxt "personal_data"
+msgid "Обработка данных в рекламных целях."
+msgstr "Processing data for advertising purposes."
+
+#: player/templates/player/personal_data.html:22
+msgctxt "personal_data"
+msgid "Категории персональных данных:"
+msgstr "Categories of personal data:"
+
+#: player/templates/player/personal_data.html:24
+msgctxt "personal_data"
+msgid "Уникальные идентификаторы социальных сетей."
+msgstr "Unique social network identifiers."
+
+#: player/templates/player/personal_data.html:25
+msgctxt "personal_data"
+msgid "Имя, фамилия и псевдонимы в социальных сетях."
+msgstr "First name, last name and nicknames on social networks."
+
+#: player/templates/player/personal_data.html:26
+msgctxt "personal_data"
+msgid "IP-адрес и информация браузера."
+msgstr "IP address and browser information."
+
+#: player/templates/player/personal_data.html:29
+msgctxt "personal_data"
+msgid "Способы и условия обработки персональных данных:"
+msgstr "Methods and conditions for processing personal data:"
+
+#: player/templates/player/personal_data.html:30
+msgctxt "personal_data"
+msgid ""
+"Сбор, хранение, использование и передача третьим лицам в рекламных целях, а "
+"также в целях повышения качества работы Сервисов Wild Politics."
+msgstr ""
+"Collection, storage, use and transfer to third parties for advertising "
+"purposes, as well as for the purpose of improving the quality of the Wild "
+"Politics Services."
+
+#: player/templates/player/personal_data.html:32
+msgctxt "personal_data"
+msgid "Передача персональных данных третьим лицам:"
+msgstr "Transfer of personal data to third parties:"
+
+#: player/templates/player/personal_data.html:33
+msgctxt "personal_data"
+msgid ""
+"Субъект персональных данных соглашается на передачу его/ее персональных "
+"данных третьим лицам, для хранения и обработки в рекламных целях, а также в "
+"целях повышения качества работы Сервисов Wild Politics."
+msgstr ""
+"The subject of personal data agrees to the transfer of his/her personal data "
+"to third parties for storage and processing for advertising purposes, as "
+"well as for the purpose of improving the quality of the Wild Politics "
+"Services."
+
+#: player/templates/player/personal_data.html:35
+msgctxt "personal_data"
+msgid "Сроки обработки персональных данных:"
+msgstr "Terms of personal data processing:"
+
+#: player/templates/player/personal_data.html:36
+msgctxt "personal_data"
+msgid ""
+"Персональные данные субъекта персональных данных хранятся и обрабатываются "
+"Администрацией до получения письменного обращения от пользователя в "
+"свободной форме, с желанием отозвать своё согласие на обработку персональных "
+"данных."
+msgstr ""
+"The personal data of the subject of personal data are stored and processed "
+"by the Administration until a written request is received from the user in "
+"free form, with the desire to revoke their consent to the processing of "
+"personal data."
+
+#: player/templates/player/personal_data.html:38
+msgctxt "personal_data"
+msgid "Отзыв согласия на обработку персональных данных:"
+msgstr "Withdrawal of consent to the processing of personal data:"
+
+#: player/templates/player/personal_data.html:39
+msgctxt "personal_data"
+msgid ""
+"Субъект персональных данных имеет право отозвать свое согласие на обработку "
+"своих персональных данных."
+msgstr ""
+"The subject of personal data has the right to revoke his consent to the "
+"processing of his personal data."
+
+#: player/templates/player/personal_data.html:40
+msgctxt "personal_data"
+msgid "Инструкция по удалению персональных данных размещена по адресу"
+msgstr "Instructions for deleting personal data are available at"
+
+#: player/templates/player/personal_data.html:42
+msgctxt "personal_data"
+msgid "Контактная информация оператора:"
+msgstr "Operator contact information:"
+
+#: player/templates/player/personal_data.html:43
+msgctxt "personal_data"
+msgid "Электронная почта Администрации:"
+msgstr "Administration email:"
+
+#: player/templates/player/personal_data.html:45
+msgctxt "personal_data"
+msgid ""
+"Я ПОДТВЕРЖДАЮ, ЧТО ЯВЛЯЮСЬ СУБЪЕКТОМ ПЕРСОНАЛЬНЫХ ДАННЫХ, ОЗНАКОМЛЕН(А) С "
+"ЦЕЛЯМИ ОБРАБОТКИ МОИХ ПЕРСОНАЛЬНЫХ ДАННЫХ И ДОБРОВОЛЬНО ПРЕДОСТАВЛЯЮ СВОЕ "
+"СОГЛАСИЕ НА ИХ ОБРАБОТКУ В СООТВЕТСТВИИ С УКАЗАННЫМИ ВЫШЕ УСЛОВИЯМИ И "
+"УСЛОВИЯМИ ЗАКОНОДАТЕЛЬСТВА."
+msgstr ""
+"I CONFIRM THAT I AM THE SUBJECT OF PERSONAL DATA, AM AWARE OF THE PURPOSES "
+"OF PROCESSING MY PERSONAL DATA AND VOLUNTARILY GIVE MY CONSENT TO THEIR "
+"PROCESSING IN ACCORDANCE WITH THE TERMS AND CONDITIONS STATED ABOVE AND THE "
+"LEGISLATION."
 
 #: player/templates/player/redesign/bonus_code/bonus_code.html:14
 #, fuzzy
